# Image-Annotation

./: .gitignore  CHANGELOG.md  README-image.md  README.md  docker-compose.my.yml  docker-compose.pg.yml
Image-Annotation-backend/: .env.dev  .env.dockermy  .env.dockerpg  fix_db_column.py  pyproject.toml
Image-Annotation-backend/config/: env.py  get_secondary_db.py  secondary_database.py
Image-Annotation-backend/module_admin/controller/: image_controller.py
Image-Annotation-backend/module_admin/dao/: image_resource_dao.py
Image-Annotation-backend/module_admin/entity/vo/: image_vo.py
Image-Annotation-backend/module_admin/service/: image_resource_service.py  log_service.py
Image-Annotation-backend/module_annotation/controller/: annotation_controller.py  home_controller.py  label_controller.py  project_controller.py  workflow_controller.py
Image-Annotation-backend/module_annotation/dao/: annotation_dao.py  label_dao.py  project_dao.py
Image-Annotation-backend/module_annotation/docs/: api.md
Image-Annotation-backend/module_annotation/entity/do/: annotation_do.py
Image-Annotation-backend/module_annotation/entity/vo/: annotation_vo.py  label_vo.py  project_vo.py
Image-Annotation-backend/module_annotation/service/: annotation_service.py  label_service.py  project_service.py
Image-Annotation-backend/scripts/: uv_run.ps1  uv_run.sh  uv_setup.ps1  uv_setup.sh
Image-Annotation-backend/sql/: ruoyi-fastapi-pg.sql  ruoyi-fastapi.sql
Image-Annotation-frontend/: .env.development  .env.docker  .env.production  .env.staging  package.json
(+69 files in other folders)
